# PSP

./: B0001.LS  B0001X1000.LS  README.md  S001.LS  S002.LS  S003.LS  S004.LS  S005.LS  output_cloud_normals.pcd
devel/: .catkin
devel/lib/downSampleAndMerge/: downSampleAndMerge
devel/lib/down_sample_and_merge/: down_sample_and_merge
devel/lib/getpcd/: getpcd
devel/lib/pkgconfig/: downSampleAndMerge.pc  down_sample_and_merge.pc  getpcd.pc  path_planning_ver1.pc
devel/share/downSampleAndMerge/cmake/: downSampleAndMergeConfig.cmake
devel/share/down_sample_and_merge/cmake/: down_sample_and_mergeConfig.cmake
devel/share/getpcd/cmake/: getpcdConfig.cmake
devel/share/path_planning_ver1/cmake/: path_planning_ver1Config.cmake
files/: B003.LS  H001.LS  TF.txt  down_sampled.pcd  logging_file.txt  point_cloud.pcd
logfile/: logging_file.txt
scan/merge/: 1.pcd  2.pcd  filted_cloud.pcd  filtered_cloud.pcd  flip_cloud.pcd  merged.pcd  merged_cloud.pcd  smooth_cloud.pcd
src/communication/: CMakeLists.txt  package.xml
src/communication/src/: modbus_plc_srv.cpp  modbus_robot_srv.cpp  passLS.cpp  passLS_srv.cpp
src/communication/srv/: Ftp.srv  ModbusRobot.srv
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: controller.launch
src/controller/src/: controller.py
src/countour_extractor/: extractor.py
src/downSampleAndMerge/: CMakeLists.txt  package.xml
src/downSampleAndMerge/src/: downSampleAndMerge.cpp  down_sample_and_merge.cpp  parameters.json
src/dsam/: CMakeLists.txt  package.xml
src/dsam/src/: dsam.cpp  parameters.json
src/dsam/srv/: dsam.srv
src/ftp_communication/: CMakeLists.txt  package.xml
src/ftp_communication/src/: LBL.LS  modbus_test.cpp  modbus_vs2017.cpp
src/getpcd/: CMakeLists.txt  package.xml
src/getpcd/src/: getpcd.cpp
src/getpcd/srv/: getpcd.srv
src/main/: CMakeLists.txt  package.xml
src/main/launch/: 3d.launch
src/main/src/: main.py  main_control.py  main_controller.py
src/main/srv/: ModbusPLC.srv
src/main_control/: package.xml
src/main_control/src/: main_3d.cpp
src/modbus_communication/: CMakeLists.txt  package.xml
src/modbus_communication/src/: modbus_test.cpp
src/path_planning_ver1/: CMakeLists.txt  package.xml
src/path_planning_ver1/src/: parameters.json  path_planning_ver1.cpp  workingSpaceTF.cpp
src/path_planning_ver1/srv/: path_planning_ver1.srv
src/psp_v2/: CMakeLists.txt  package.xml
src/vision_capture/: CMakeLists.txt  package.xml
src/vision_capture/src/: vision_capture.py  visualize.py
src/vision_capture/srv/: VisionCapture.srv
src/vision_capture2/: CMakeLists.txt  package.xml
src/vision_capture2/src/: vision_capture.py  visualize.py
testingFile/: B003.LS  S003.LS  S004.LS
utils/: writeLsFile.hpp
